--- a/src/app.sass
+++ b/src/app.sass
@@ -2,3 +2,14 @@ $primary-color: #000
 
 h1
     color: $primary-color
+
+.app-container
+    align-items: center
+    display: flex
+    flex-direction: column
+    height: 100vh
+    justify-content: center
+
+.app-logo
+    height: 256px
+    width: 256px
